--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <link rel="stylesheet" href="./src/css/globalStyle.css">
 
-    <title>Titulo</title>
+    <title>Portifolio</title>
 </head>
 <body>
     <div id="root"></div>
 
-    <script type="module" src="./pages/main.jsx"></script>
+    <script type="module" src="./src/pages/main.jsx"></script>
 </body>
 </html>
